# AIstoteles

./: pyproject.toml  readme.md  requirements.txt
data/collections/blockchain/: 1.md  2.md  3.md  4.md  5.md  6.md  readme.md
data/collections/openzeplin/: 1.md
data/collections/solidity/: 1.md
docstoteles/: app.py
docstoteles/presentation/: chat.py  scraping.py
docstoteles/service/: rag.py  scraping.py
